Itens ocultos adicionados

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
                     <div class="texto-card">
                         <h3>Frango Yin Yang</h3>
                         <p>Um pouco de batata, um pouco de salada</p>
-                        <h4>R$ 14,90</h4>   
+                        <div class="icone-preco">
+                            <h4>R$ 14,90</h4>
+                            <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
+                        </div> 
                     </div>
                 </button>
 
@@ -33,7 +36,10 @@
                     <div class="texto-card">
                         <h3>Frango Yin Yang</h3>
                         <p>Um pouco de batata, um pouco de salada</p>
-                        <h4>R$ 14,90</h4>
+                        <div class="icone-preco">
+                            <h4>R$ 12,00</h4>
+                            <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
+                        </div> 
                     </div>
                 </button>
 
@@ -42,8 +48,11 @@
                     <div class="texto-card">
                         <h3>Frango Yin Yang</h3>
                         <p>Um pouco de batata, um pouco de salada</p>
-                        <h4>R$ 14,90</h4>
-                    </div> 
+                        <div class="icone-preco">
+                            <h4>R$ 20,90</h4>
+                            <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
+                        </div> 
+                    </div>
                 </button>
 
                 <button class="card">
@@ -51,9 +60,25 @@
                     <div class="texto-card">
                         <h3>Frango Yin Yang</h3>
                         <p>Um pouco de batata, um pouco de salada</p>
-                        <h4>R$ 14,90</h4>
+                        <div class="icone-preco">
+                            <h4>R$ 24,00</h4>
+                            <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
+                        </div> 
                     </div>
-                </button> 
+                </button>
+
+                <button class="card">
+                    <img src="imagens/frango_yin_yang.png">
+                    <div class="texto-card">
+                        <h3>Frango Yin Yang</h3>
+                        <p>Um pouco de batata, um pouco de salada</p>
+                        <div class="icone-preco">
+                            <h4>R$ 12,50</h4>
+                            <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
+                        </div> 
+                    </div>
+                </button>
+
             </div>
         </div>
         <!-- PRATO PRINCIPAL -->
@@ -67,36 +92,60 @@
                     <div class="texto-card">
                         <h3>Coquinha gelada</h3>
                         <p>Lata 350ml</p>
-                        <h4>R$ 4,90</h4>
+                        <div class="icone-preco">
+                            <h4>R$ 9,00</h4>
+                            <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
+                        </div> 
                     </div>
                 </button>
 
                 <button class="card">
-                    <img src="imagens/frango_yin_yang.png">
+                    <img src="imagens/coquinha_gelada.png">
                     <div class="texto-card">
-                        <h3>Frango Yin Yang</h3>
-                        <p>Um pouco de batata, um pouco de salada</p>
-                        <h4>R$ 14,90</h4>
+                        <h3>Coquinha gelada</h3>
+                        <p>Lata 350ml</p>
+                        <div class="icone-preco">
+                            <h4>R$ 7,00</h4>
+                            <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
+                        </div> 
                     </div>
                 </button>
 
                 <button class="card">
-                    <img src="imagens/frango_yin_yang.png">
+                    <img src="imagens/coquinha_gelada.png">
                     <div class="texto-card">
-                        <h3>Frango Yin Yang</h3>
-                        <p>Um pouco de batata, um pouco de salada</p>
-                        <h4>R$ 14,90</h4>
-                    </div> 
+                        <h3>Coquinha gelada</h3>
+                        <p>Lata 350ml</p>
+                        <div class="icone-preco">
+                            <h4>R$ 6,90</h4>
+                            <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
+                        </div> 
+                    </div>
                 </button>
 
                 <button class="card">
-                    <img src="imagens/frango_yin_yang.png">
+                    <img src="imagens/coquinha_gelada.png">
                     <div class="texto-card">
-                        <h3>Frango Yin Yang</h3>
-                        <p>Um pouco de batata, um pouco de salada</p>
-                        <h4>R$ 14,90</h4>
+                        <h3>Coquinha gelada</h3>
+                        <p>Lata 350ml</p>
+                        <div class="icone-preco">
+                            <h4>R$ 5,75</h4>
+                            <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
+                        </div> 
                     </div>
-                </button> 
+                </button>
+
+                <button class="card">
+                    <img src="imagens/coquinha_gelada.png">
+                    <div class="texto-card">
+                        <h3>Coquinha gelada</h3>
+                        <p>Lata 350ml</p>
+                        <div class="icone-preco">
+                            <h4>R$ 11,00</h4>
+                            <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
+                        </div> 
+                    </div>
+                </button>
             </div>
         </div>
         <!-- BEBIDAS -->
@@ -109,49 +158,79 @@
                     <div class="texto-card">
                         <h3>Pudim</h3>
                         <p>Apenas pudim</p>
-                        <h4>R$ 7,90</h4>
+                        <div class="icone-preco">
+                            <h4>R$ 7,90</h4>
+                            <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
+                        </div> 
                     </div>
                 </button>
 
                 <button class="card">
-                    <img src="imagens/frango_yin_yang.png">
+                    <img src="imagens/pudim.png">
                     <div class="texto-card">
-                        <h3>Frango Yin Yang</h3>
-                        <p>Um pouco de batata, um pouco de salada</p>
-                        <h4>R$ 14,90</h4>
+                        <h3>Pudim</h3>
+                        <p>Apenas pudim</p>
+                        <div class="icone-preco">
+                            <h4>R$ 6,90</h4>
+                            <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
+                        </div> 
                     </div>
                 </button>
 
                 <button class="card">
-                    <img src="imagens/frango_yin_yang.png">
+                    <img src="imagens/pudim.png">
                     <div class="texto-card">
-                        <h3>Frango Yin Yang</h3>
-                        <p>Um pouco de batata, um pouco de salada</p>
-                        <h4>R$ 14,90</h4>
-                    </div> 
+                        <h3>Pudim</h3>
+                        <p>Apenas pudim</p>
+                        <div class="icone-preco">
+                            <h4>R$ 5,90</h4>
+                            <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
+                        </div> 
+                    </div>
                 </button>
 
                 <button class="card">
-                    <img src="imagens/frango_yin_yang.png">
+                    <img src="imagens/pudim.png">
                     <div class="texto-card">
-                        <h3>Frango Yin Yang</h3>
-                        <p>Um pouco de batata, um pouco de salada</p>
-                        <h4>R$ 14,90</h4>
+                        <h3>Pudim</h3>
+                        <p>Apenas pudim</p>
+                        <div class="icone-preco">
+                            <h4>R$ 5,50</h4>
+                            <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
+                        </div> 
                     </div>
-                </button> 
+                </button>
+                
+                <button class="card">
+                    <img src="imagens/pudim.png">
+                    <div class="texto-card">
+                        <h3>Pudim</h3>
+                        <p>Apenas pudim</p>
+                        <div class="icone-preco">
+                            <h4>R$ 5,60</h4>
+                            <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
+                        </div> 
+                    </div>
+                </button>
             </div>
         </div>
         <!-- SOBREMESAS -->
     </div>
 
     <div class="fechar-pedido">
-        <button>
+        <button class="sem-selecao ">
             <div>
                 <p>Selecione os 3 itens para fechar o pedido</p>
+            </div>
+        </button>
+        <button class="com-selecao desliga" >
+            <div>
+                <p>Fechar pedido</p>
             </div>
         </button>
     </div>
 
     <script src="scripts.js"></script>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 </html>
