--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="opcoes-comida">
             <h2>Primeiro, seu prato</h2>
             <div class="area-rolagem">
-                <button class="card">
+                <button onclick="botaoComida(this)" class="card">
                     <img src="imagens/frango_yin_yang.png">
                     <div class="texto-card">
                         <h3>Frango Yin Yang</h3>
@@ -31,7 +31,7 @@
                     </div>
                 </button>
 
-                <button class="card">
+                <button onclick="botaoComida(this)" class="card">
                     <img src="imagens/frango_yin_yang.png">
                     <div class="texto-card">
                         <h3>Frango Yin Yang</h3>
@@ -43,7 +43,7 @@
                     </div>
                 </button>
 
-                <button class="card">
+                <button onclick="botaoComida(this)" class="card">
                     <img src="imagens/frango_yin_yang.png">
                     <div class="texto-card">
                         <h3>Frango Yin Yang</h3>
@@ -55,7 +55,7 @@
                     </div>
                 </button>
 
-                <button class="card">
+                <button onclick="botaoComida(this)" class="card">
                     <img src="imagens/frango_yin_yang.png">
                     <div class="texto-card">
                         <h3>Frango Yin Yang</h3>
@@ -67,7 +67,7 @@
                     </div>
                 </button>
 
-                <button class="card">
+                <button onclick="botaoComida(this)" class="card">
                     <img src="imagens/frango_yin_yang.png">
                     <div class="texto-card">
                         <h3>Frango Yin Yang</h3>
@@ -87,7 +87,7 @@
         <div class="opcoes-comida">
             <h2>Agora, sua bebida</h2>
             <div class="area-rolagem">
-                <button class="card">
+                <button onclick="botaoBebida(this)" class="card">
                     <img src="imagens/coquinha_gelada.png">
                     <div class="texto-card">
                         <h3>Coquinha gelada</h3>
@@ -99,7 +99,7 @@
                     </div>
                 </button>
 
-                <button class="card">
+                <button onclick="botaoBebida(this)" class="card">
                     <img src="imagens/coquinha_gelada.png">
                     <div class="texto-card">
                         <h3>Coquinha gelada</h3>
@@ -111,7 +111,7 @@
                     </div>
                 </button>
 
-                <button class="card">
+                <button onclick="botaoBebida(this)" class="card">
                     <img src="imagens/coquinha_gelada.png">
                     <div class="texto-card">
                         <h3>Coquinha gelada</h3>
@@ -123,7 +123,7 @@
                     </div>
                 </button>
 
-                <button class="card">
+                <button onclick="botaoBebida(this)" class="card">
                     <img src="imagens/coquinha_gelada.png">
                     <div class="texto-card">
                         <h3>Coquinha gelada</h3>
@@ -135,7 +135,7 @@
                     </div>
                 </button>
 
-                <button class="card">
+                <button onclick="botaoBebida(this)" class="card">
                     <img src="imagens/coquinha_gelada.png">
                     <div class="texto-card">
                         <h3>Coquinha gelada</h3>
@@ -153,7 +153,7 @@
         <div class="opcoes-comida">
             <h2>Por fim, sua sobremesa</h2>
             <div class="area-rolagem">
-                <button class="card">
+                <button onclick="botaoSobremesa(this)" class="card">
                     <img src="imagens/pudim.png">
                     <div class="texto-card">
                         <h3>Pudim</h3>
@@ -165,7 +165,7 @@
                     </div>
                 </button>
 
-                <button class="card">
+                <button onclick="botaoSobremesa(this)" class="card">
                     <img src="imagens/pudim.png">
                     <div class="texto-card">
                         <h3>Pudim</h3>
@@ -177,7 +177,7 @@
                     </div>
                 </button>
 
-                <button class="card">
+                <button onclick="botaoSobremesa(this)" class="card">
                     <img src="imagens/pudim.png">
                     <div class="texto-card">
                         <h3>Pudim</h3>
@@ -189,7 +189,7 @@
                     </div>
                 </button>
 
-                <button class="card">
+                <button onclick="botaoSobremesa(this)" class="card">
                     <img src="imagens/pudim.png">
                     <div class="texto-card">
                         <h3>Pudim</h3>
@@ -201,7 +201,7 @@
                     </div>
                 </button>
                 
-                <button class="card">
+                <button onclick="botaoSobremesa(this)" class="card">
                     <img src="imagens/pudim.png">
                     <div class="texto-card">
                         <h3>Pudim</h3>
@@ -218,7 +218,7 @@
     </div>
 
     <div class="fechar-pedido">
-        <button class="sem-selecao ">
+        <button class="sem-selecao">
             <div>
                 <p>Selecione os 3 itens para fechar o pedido</p>
             </div>
