--- a/index.html
+++ b/index.html
@@ -25,55 +25,55 @@
                         <h3>Frango Yin Yang</h3>
                         <p>Um pouco de batata, um pouco de salada</p>
                         <div class="icone-preco">
-                            <h4>R$ 14,90</h4>
+                            <h4>R$ <span>14,90</span></h4>
                             <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
                         </div> 
                     </div>
                 </button>
 
                 <button onclick="botaoComida(this)" class="card">
-                    <img src="imagens/frango_yin_yang.png">
+                    <img src="imagens/prato-boi.jpg">
                     <div class="texto-card">
-                        <h3>Frango Yin Yang</h3>
+                        <h3>Prato bife de boi</h3>
                         <p>Um pouco de batata, um pouco de salada</p>
                         <div class="icone-preco">
-                            <h4>R$ 12,00</h4>
+                            <h4>R$ <span>12,00</span></h4>
                             <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
                         </div> 
                     </div>
                 </button>
 
                 <button onclick="botaoComida(this)" class="card">
-                    <img src="imagens/frango_yin_yang.png">
+                    <img src="imagens/strogonoff.jpg">
                     <div class="texto-card">
-                        <h3>Frango Yin Yang</h3>
-                        <p>Um pouco de batata, um pouco de salada</p>
+                        <h3>Strogonoff de frango</h3>
+                        <p>Batata palha e arroz</p>
                         <div class="icone-preco">
-                            <h4>R$ 20,90</h4>
+                            <h4>R$ <span>20,90</span></h4>
                             <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
                         </div> 
                     </div>
                 </button>
 
                 <button onclick="botaoComida(this)" class="card">
-                    <img src="imagens/frango_yin_yang.png">
+                    <img src="imagens/feijoada.jpg">
                     <div class="texto-card">
-                        <h3>Frango Yin Yang</h3>
-                        <p>Um pouco de batata, um pouco de salada</p>
+                        <h3>Feijoada completa</h3>
+                        <p>Arroz, couve, farofa e batata frita</p>
                         <div class="icone-preco">
-                            <h4>R$ 24,00</h4>
+                            <h4>R$ <span>24,00</span></h4>
                             <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
                         </div> 
                     </div>
                 </button>
 
                 <button onclick="botaoComida(this)" class="card">
-                    <img src="imagens/frango_yin_yang.png">
+                    <img src="imagens/salada.jpg">
                     <div class="texto-card">
-                        <h3>Frango Yin Yang</h3>
-                        <p>Um pouco de batata, um pouco de salada</p>
+                        <h3>Salada</h3>
+                        <p>Apenas salada, super saudável</p>
                         <div class="icone-preco">
-                            <h4>R$ 12,50</h4>
+                            <h4>R$ <span>12,50</span></h4>
                             <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
                         </div> 
                     </div>
@@ -93,55 +93,55 @@
                         <h3>Coquinha gelada</h3>
                         <p>Lata 350ml</p>
                         <div class="icone-preco">
-                            <h4>R$ 9,00</h4>
+                            <h4>R$ <span>9,00</span></h4>
                             <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
                         </div> 
                     </div>
                 </button>
 
                 <button onclick="botaoBebida(this)" class="card">
-                    <img src="imagens/coquinha_gelada.png">
+                    <img src="imagens/guarana2.jpg">
                     <div class="texto-card">
-                        <h3>Coquinha gelada</h3>
+                        <h3>Guaraná gelado</h3>
                         <p>Lata 350ml</p>
                         <div class="icone-preco">
-                            <h4>R$ 7,00</h4>
+                            <h4>R$ <span>7,00</span></h4>
                             <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
                         </div> 
                     </div>
                 </button>
 
                 <button onclick="botaoBebida(this)" class="card">
-                    <img src="imagens/coquinha_gelada.png">
+                    <img src="imagens/Suco-lata.jpg">
                     <div class="texto-card">
-                        <h3>Coquinha gelada</h3>
+                        <h3>Suco lata</h3>
                         <p>Lata 350ml</p>
                         <div class="icone-preco">
-                            <h4>R$ 6,90</h4>
+                            <h4>R$ <span>6,90</span></h4>
                             <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
                         </div> 
                     </div>
                 </button>
 
                 <button onclick="botaoBebida(this)" class="card">
-                    <img src="imagens/coquinha_gelada.png">
+                    <img src="imagens/jarra-de-suco.jpg">
                     <div class="texto-card">
-                        <h3>Coquinha gelada</h3>
-                        <p>Lata 350ml</p>
+                        <h3>Suco natural</h3>
+                        <p>Laranja, limão ou uva (entrega em um recipiente de plastico)</p>
                         <div class="icone-preco">
-                            <h4>R$ 5,75</h4>
+                            <h4>R$ <span>5,75</span></h4>
                             <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
                         </div> 
                     </div>
                 </button>
 
                 <button onclick="botaoBebida(this)" class="card">
-                    <img src="imagens/coquinha_gelada.png">
+                    <img src="imagens/refrigerante-litro.png">
                     <div class="texto-card">
-                        <h3>Coquinha gelada</h3>
-                        <p>Lata 350ml</p>
+                        <h3>Refrigerante litro</h3>
+                        <p>Coca-Cola, Guaraná ou Fanta</p>
                         <div class="icone-preco">
-                            <h4>R$ 11,00</h4>
+                            <h4>R$ <span>11,00</span></h4>
                             <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
                         </div> 
                     </div>
@@ -159,55 +159,55 @@
                         <h3>Pudim</h3>
                         <p>Apenas pudim</p>
                         <div class="icone-preco">
-                            <h4>R$ 7,90</h4>
+                            <h4>R$ <span>7,90</span></h4>
                             <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
                         </div> 
                     </div>
                 </button>
 
                 <button onclick="botaoSobremesa(this)" class="card">
-                    <img src="imagens/pudim.png">
+                    <img src="imagens/petit-gateau.jpeg">
                     <div class="texto-card">
-                        <h3>Pudim</h3>
-                        <p>Apenas pudim</p>
+                        <h3>Petit Gateau</h3>
+                        <p>Com sorvete de creme</p>
                         <div class="icone-preco">
-                            <h4>R$ 6,90</h4>
+                            <h4>R$ <span>6,90</span></h4>
                             <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
                         </div> 
                     </div>
                 </button>
 
                 <button onclick="botaoSobremesa(this)" class="card">
-                    <img src="imagens/pudim.png">
+                    <img src="imagens/brigadeiro.jpg">
                     <div class="texto-card">
-                        <h3>Pudim</h3>
-                        <p>Apenas pudim</p>
+                        <h3>Brigadeiro</h3>
+                        <p>Apenas brigadeiro</p>
                         <div class="icone-preco">
-                            <h4>R$ 5,90</h4>
+                            <h4>R$ <span>5,90</span></h4>
                             <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
                         </div> 
                     </div>
                 </button>
 
                 <button onclick="botaoSobremesa(this)" class="card">
-                    <img src="imagens/pudim.png">
+                    <img src="imagens/sorvete.jpg">
                     <div class="texto-card">
-                        <h3>Pudim</h3>
-                        <p>Apenas pudim</p>
+                        <h3>Sorvete</h3>
+                        <p>Creme, morango e chocolate</p>
                         <div class="icone-preco">
-                            <h4>R$ 5,50</h4>
+                            <h4>R$ <span>5,50</span></h4>
                             <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
                         </div> 
                     </div>
                 </button>
                 
                 <button onclick="botaoSobremesa(this)" class="card">
-                    <img src="imagens/pudim.png">
+                    <img src="imagens/picole.jpg">
                     <div class="texto-card">
-                        <h3>Pudim</h3>
-                        <p>Apenas pudim</p>
+                        <h3>Picolé</h3>
+                        <p>Abacaxi, uva, limão e milho verde</p>
                         <div class="icone-preco">
-                            <h4>R$ 5,60</h4>
+                            <h4>R$ <span>5,60</span></h4>
                             <ion-icon name="checkmark-circle" class="desliga"></ion-icon>  
                         </div> 
                     </div>
