versão botão funcionado

--- a/index.html
+++ b/index.html
@@ -223,11 +223,12 @@
                 <p>Selecione os 3 itens para fechar o pedido</p>
             </div>
         </button>
-        <button class="com-selecao desliga" >
+        <a href="" target="_blank" ><button class="com-selecao desliga" >
             <div>
                 <p>Fechar pedido</p>
             </div>
         </button>
+        </a>
     </div>
 
     <script src="scripts.js"></script>
